--- a/13. 1-D Dynamic Programming/09. Maximum Product Subarray.html
+++ b/13. 1-D Dynamic Programming/09. Maximum Product Subarray.html
@@ -10,27 +10,28 @@
 <body>
     <script>
         function maxProduct(nums) {
+            if (nums.length === 0) return 0;
+
             let maxSoFar = nums[0];
             let minSoFar = nums[0];
             let result = nums[0];
 
             for (let i = 1; i < nums.length; i++) {
-                let curr = nums[i];
 
                 // If the current number is negative, swap max and min
-                if (curr < 0) {
+                if (nums[i] < 0) {
                     [maxSoFar, minSoFar] = [minSoFar, maxSoFar];
                 }
 
-                maxSoFar = Math.max(curr, curr * maxSoFar);
-                minSoFar = Math.min(curr, curr * minSoFar);
+                maxSoFar = Math.max(nums[i], nums[i] * maxSoFar);
+                minSoFar = Math.min(nums[i], nums[i] * minSoFar);
                 result = Math.max(result, maxSoFar);
             }
 
             return result;
         };
 
-        nums = [-2, 0, -1];
+        nums = [-2];
         console.log(maxProduct(nums));
     </script>
 </body>
