--- a/13. 1-D Dynamic Programming/02. Min Cost Climbing Stairs.html
+++ b/13. 1-D Dynamic Programming/02. Min Cost Climbing Stairs.html
@@ -10,11 +10,17 @@
 <body>
     <script>
         function minCostClimbingStairs(cost) {
-            for (let i = cost.length - 3; i >= 0; i--) {
-                cost[i] = Math.min(cost[i] + cost[i + 1], cost[i] + cost[i + 2]);
+            const n = cost.length;
+            const dp = new Array(n).fill(0);
+
+            dp[0] = cost[0];
+            dp[1] = cost[1];
+
+            for (let i = 2; i < n; i++) {
+                dp[i] = cost[i] + Math.min(dp[i - 1], dp[i - 2]);
             }
 
-            return Math.min(cost[0], cost[1]);
+            return Math.min(dp[n - 1], dp[n - 2]);
         }
 
         const cost = [1, 2, 1, 2, 1, 1, 1];
