--- a/13. 1-D Dynamic Programming/01. Climbing Stairs.html
+++ b/13. 1-D Dynamic Programming/01. Climbing Stairs.html
@@ -10,19 +10,20 @@
 <body>
     <script>
         function climbStairs(n) {
-            let one = 1;
-            let two = 1;
+            if (n <= 2) return n;
 
-            for (let i = 0; i < n - 1; i++) {
-                let temp = one;
-                one = one + two;
-                two = temp;
+            const dp = new Array(n + 1).fill(0);
+            dp[1] = 1;
+            dp[2] = 2;
+
+            for (let i = 3; i <= n; i++) {
+                dp[i] = dp[i - 1] + dp[i - 2];
             }
 
-            return one;
-        }
+            return dp[n];
+        };
 
-        const n = 5;
+        const n = 2;
         console.log(climbStairs(n));
     </script>
 </body>
