--- a/13. 1-D Dynamic Programming/09. Maximum Product Subarray.html
+++ b/13. 1-D Dynamic Programming/09. Maximum Product Subarray.html
@@ -10,28 +10,21 @@
 <body>
     <script>
         function maxProduct(nums) {
-            if (nums.length === 0) return 0;
+            let res = nums[0];
+            let curMax = 1;
+            let curMin = 1;
 
-            let maxSoFar = nums[0];
-            let minSoFar = nums[0];
-            let result = nums[0];
-
-            for (let i = 1; i < nums.length; i++) {
-
-                // If the current number is negative, swap max and min
-                if (nums[i] < 0) {
-                    [maxSoFar, minSoFar] = [minSoFar, maxSoFar];
-                }
-
-                maxSoFar = Math.max(nums[i], nums[i] * maxSoFar);
-                minSoFar = Math.min(nums[i], nums[i] * minSoFar);
-                result = Math.max(result, maxSoFar);
+            for (const num of nums) {
+                const tmp = curMax * num;
+                curMax = Math.max(Math.max(num * curMax, num * curMin), num);
+                curMin = Math.min(Math.min(tmp, num * curMin), num);
+                res = Math.max(res, curMax);
             }
 
-            return result;
-        };
+            return res;
+        }
 
-        nums = [-2];
+        const nums = [1, 2, -3, 4];
         console.log(maxProduct(nums));
     </script>
 </body>
