--- a/14. 2-D Dynamic Programming/01. Unique Paths.html
+++ b/14. 2-D Dynamic Programming/01. Unique Paths.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Unique Paths</title>
 </head>
+
 <body>
-    
+    <script>
+        function uniquePaths(m, n) {
+            const dp = Array.from({ length: m }, () => Array(n).fill(1));
+
+            for (let i = 1; i < m; i++) {
+                for (let j = 1; j < n; j++) {
+                    dp[i][j] = dp[i - 1][j] + dp[i][j - 1];
+                }
+            }
+
+            return dp[m - 1][n - 1];
+        };
+
+        m = 3, n = 6
+        console.log(uniquePaths(m, n));
+    </script>
 </body>
+
 </html>
