--- a/07. Trees/03. Diameter of Binary Tree.html
+++ b/07. Trees/03. Diameter of Binary Tree.html
@@ -9,10 +9,10 @@
 
 <body>
     <script>
-        var diameterOfBinaryTree = function (root) {
+        function diameterOfBinaryTree(root) {
             let maxDiameter = 0;
 
-            function dfs(node) {
+            const dfs = (node) => {
                 if (node === null) return 0;
 
                 const left = dfs(node.left);
@@ -21,7 +21,7 @@
                 // Update the max diameter at this node
                 maxDiameter = Math.max(maxDiameter, left + right);
 
-                // Return max depth to parent
+                // return height of this node
                 return 1 + Math.max(left, right);
             }
 
