--- a/07. Trees/04. Balanced Binary Tree.html
+++ b/07. Trees/04. Balanced Binary Tree.html
@@ -10,23 +10,23 @@
 <body>
     <script>
         function isBalanced(root) {
-            function checkHeight(node) {
+            function dfs(node) {
                 if (node === null) return 0;
 
-                const leftHeight = checkHeight(node.left);
-                if (leftHeight === -1) return -1;
+                const left = dfs(node.left);
+                if (left === -1) return -1;
 
-                const rightHeight = checkHeight(node.right);
-                if (rightHeight === -1) return -1;
+                const right = dfs(node.right);
+                if (right === -1) return -1;
 
-                if (Math.abs(leftHeight - rightHeight) > 1) {
+                if (Math.abs(left - right) > 1) {
                     return -1;
                 }
 
-                return Math.max(leftHeight, rightHeight) + 1;
+                return 1 + Math.max(left, right);
             }
 
-            return checkHeight(root) !== -1;
+            return dfs(root) !== -1;
         }
     </script>
 </body>
