--- a/07. Trees/08. Binary Tree Level Order Traversal.html
+++ b/07. Trees/08. Binary Tree Level Order Traversal.html
@@ -11,10 +11,8 @@
     <script>
         function levelOrder(root) {
             const result = [];
-            if (!root) return result;
-
             const queue = [];
-            queue.push(root);
+            if (root) queue.push(root);
 
             while (queue.length > 0) {
                 const levelSize = queue.length;
