--- a/07. Trees/10. Count Good Nodes in Binary Tree.html
+++ b/07. Trees/10. Count Good Nodes in Binary Tree.html
@@ -10,7 +10,7 @@
 <body>
     <script>
         function goodNodes(root) {
-            function dfs(node, maxVal) {
+            const dfs = (node, maxVal) => {
                 if (!node) return 0;
 
                 // Is this node good?
