--- a/08. Heap - Priority Queue/01. Kth Largest Element in a Stream.html
+++ b/08. Heap - Priority Queue/01. Kth Largest Element in a Stream.html
@@ -16,10 +16,9 @@
 
                 for (const num of nums) {
                     this.minHeap.enqueue(num);
-                }
-
-                while (this.minHeap.size() > k) {
-                    this.minHeap.dequeue();
+                    if (this.minHeap.size() > k) {
+                        this.minHeap.dequeue();
+                    }
                 }
             }
 
