--- a/08. Heap - Priority Queue/01. Kth Largest Element in a Stream.html
+++ b/08. Heap - Priority Queue/01. Kth Largest Element in a Stream.html
@@ -15,13 +15,9 @@
                 this.k = k;
 
                 for (const num of nums) {
-                    this.minHeap.enqueue(num);
-                    if (this.minHeap.size() > k) {
-                        this.minHeap.dequeue();
-                    }
+                    this.add(num);
                 }
             }
-
 
             add(val) {
                 this.minHeap.enqueue(val);
