--- a/08. Heap - Priority Queue/05. Task Scheduler.html
+++ b/08. Heap - Priority Queue/05. Task Scheduler.html
@@ -10,35 +10,29 @@
 <body>
     <script>
         function leastInterval(tasks, n) {
-            let count = new Array(26).fill(0);
-
-            for (let task of tasks) {
-                count[task.charCodeAt(0) - 'A'.charCodeAt(0)]++;
+            const count = {};
+            for (const task of tasks) {
+                count[task] = (count[task] || 0) + 1;
             }
 
-            let maxHeap = new MaxPriorityQueue();
-
-            for (let i = 0; i < 26; i++) {
-                if (count[i] > 0) {
-                    maxHeap.push(count[i])
-                }
+            const maxPQ = new MaxPriorityQueue();
+            for (const val of Object.values(count)) {
+                maxPQ.enqueue(val);
             }
 
             let time = 0;
-            let q = new Queue();
+            const q = [];
 
-            while (maxHeap.size() > 0 || q.size() > 0) {
+            while (!maxPQ.isEmpty() || q.length > 0) {
                 time++;
 
-                if (maxHeap.size() > 0) {
-                    let cnt = maxHeap.pop() - 1;
-                    if (cnt !== 0) {
-                        q.push([cnt, time + n]);
-                    }
+                if (!maxPQ.isEmpty()) {
+                    let cnt = maxPQ.dequeue() - 1;
+                    if (cnt > 0) q.push([cnt, time + n]);
                 }
 
-                if (q.size() > 0 && q.front()[1] === time) {
-                    maxHeap.push(q.pop()[0]);
+                if (q.length > 0 && q[0][1] === time) {
+                    maxPQ.enqueue(q.shift()[0]);
                 }
             }
 
@@ -46,5 +40,5 @@
         }
     </script>
 </body>
-  
+
 </html>
