--- a/11. Graphs/01. Number of Islands.html
+++ b/11. Graphs/01. Number of Islands.html
@@ -7,6 +7,47 @@
 </head>
 <body>
     <script>
+        // Method 1
+        function numIslands(grid) {
+            const rows = grid.length;
+            const cols = grid[0].length;
+
+            const dfs = (r, c) => {
+                // base case: out of bounds or water
+                if (r < 0 || c < 0 || r >= rows || c >= cols || grid[r][c] === '0') {
+                    return false;
+                }
+
+                // mark the current cell as visited
+                grid[r][c] = '0';
+
+                // explore all 4 directions
+                dfs(r + 1, c);
+                dfs(r - 1, c);
+                dfs(r, c + 1);
+                dfs(r, c - 1);
+
+                return true; // we found an island
+            };
+
+            let islands = 0;
+
+            for (let r = 0; r < rows; r++) {
+                for (let c = 0; c < cols; c++) {
+                    if (dfs(r, c)) {
+                        islands++;
+                    }
+                }
+            }
+
+            return islands;
+        }
+
+
+
+        
+
+        // Method 2
         class Solution {
 
             numIslands(grid) {
